# dstructs_c

./: .gitignore  CMakeLists.txt  README.md  generic.h  hashtable.h  linkedlist.h  syntaxtree.c  syntaxtree.h
example/: main.c
